# ninetoothed-puzzles

./: .gitignore  README.md  ninetoothed-puzzles.py  puzzle_runner.py  pyproject.toml
ntpuzzles/: __init__.py  cli.py  curriculum.py  game.py  levels.py
tests/: test_curriculum.py  test_game_files.py
ui/: app.py
