[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ninetoothed-puzzles"
version = "0.1.0"
description = "Game-like learning puzzles for the NineToothed DSL."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "prompt_toolkit>=3.0",
    "rich>=13.7",
]

[project.optional-dependencies]
runtime = [
    "ninetoothed",
    "torch",
]
ui = [
    "streamlit>=1.36",
    "streamlit-ace>=0.1.1",
]
dev = [
    "pytest",
]

[project.scripts]
ntpuzzles = "ntpuzzles.cli:main"

[tool.setuptools.packages.find]
include = ["ntpuzzles*"]
